--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prod": "npm run build && npm start"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "compression": "^1.8.1",
     "express": "^5.1.0",
     "lucide-react": "^0.263.0",
